--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,18 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: Barlow # Nom de la famille de police
+      fonts:
+        - asset: assets/fonts/Barlow-Bold.ttf # Chemin vers le fichier
+        - asset: assets/fonts/Barlow-Regular.ttf
+          weight: 500 # Poids pour le gras
+        - asset: assets/fonts/Barlow-SemiBold.ttf
+          weight: 600 # Poids pour le semi-gras
+    - family: BebasNeue # Autre famille de police
+      fonts:
+        - asset: assets/fonts/BebasNeue-Bold.ttf
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
