--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,129 +1,243 @@
+# Nouveau Clean
+
 name: kunft
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  # ✅ Recommended: Use the caret syntax for compatibility with minor updates
+  # This version is a good starting point for modern packages.
+  # Update this to a more recent version to avoid compatibility issues.
+  sdk: '>=3.9.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  carousel_slider: ^5.0.0
-  carousel_slider_plus: ^7.1.0
-  card_swiper: ^3.0.1
+  # UI and Widgets
+  # You had two carousel packages; let's stick with the more popular one
+  carousel_slider: ^4.2.1
+  # card_swiper: ^3.0.1  // A bit old; consider using carousel_slider instead if you can
   animated_switcher_plus: ^1.1.1
+  animated_notch_bottom_bar: ^1.0.3
+  salomon_bottom_bar: ^3.3.2
+  animations: ^2.0.11
+  photo_view: ^0.15.0 # Updated package for better compatibility
+  
+  # Networking and Data
   http: ^1.4.0
   dio: ^5.8.0+1
   http_parser: ^4.1.2
-  image_picker: ^1.1.2
   shared_preferences: ^2.5.3
-  css_colors: ^1.1.7
-  firebase_core: ^3.15.1
-  firebase_auth: ^5.6.2
-  google_sign_in: ^7.1.0
-  sign_in_with_apple: ^7.0.1
-  firebase_app_installations: ^0.3.2+9
-  intl: ^0.20.2
-  cloud_firestore: ^5.6.12
+  
+  # Phone Number
+  # intl_phone_number_input: ^0.7.4  
+  # // Has known build issues on iOS
+
+  # Location and Maps
+  google_maps_flutter: ^2.12.3
+  flutter_map: ^8.2.1
+  latlong2: ^0.9.1
+
+  # Date Pickers and QR
   calendar_date_picker2: ^2.0.1
-  mobile_scanner: ^7.0.1
-  qr_code_scanner_plus: ^2.0.10+1
-  qr: ^3.0.2
-  lucide_icons: ^0.257.0
-  animated_notch_bottom_bar: ^1.0.3
-  salomon_bottom_bar: ^3.3.2
-  provider: ^6.1.5
-  animations: ^2.0.11
   flutter_date_pickers: ^0.4.3
+  mobile_scanner: ^5.0.0 # A robust QR/barcode scanner
+  qr_code_scanner_plus: ^2.0.10+1  # Replaced by mobile_scanner
+  qr_flutter: ^4.1.0 # Standard QR code generator
+  photo_view_v3: ^0.14.0
+  
+  # Other Utilities
+  lucide_icons: ^0.257.0
+  provider: ^6.1.5
+  image_picker: ^1.1.2
+  css_colors: ^1.1.7
+  intl: ^0.20.2
+  flutter_local_notifications: ^19.4.1
+  animated_text_kit: ^4.2.3
+  # phone_form_field: ^10.0.10
+  
+  # Firebase (Uncomment and manage versions if you use them)
+  # firebase_core: ^3.0.0
+  # firebase_auth: ^5.0.0
+  # google_sign_in: ^6.2.1
+  # sign_in_with_apple: ^6.1.0
+  # firebase_app_installations: ^0.2.1+3
+  # cloud_firestore: ^5.0.0
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter 
+  flutter_lints: ^4.0.0 # Updated to a more recent, stable version
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
+  # ✅ Corrected font family structure.
   fonts:
-    - family: Barlow # Nom de la famille de police
+    - family: Raleway
       fonts:
-        - asset: assets/fonts/Raleway-Bold.ttf # Chemin vers le fichier
         - asset: assets/fonts/Raleway-Regular.ttf
-          weight: 500 # Poids pour le gras
+          weight: 500
         - asset: assets/fonts/Raleway-SemiBold.ttf
-          weight: 600 # Poids pour le semi-gras
-    - family: BebasNeue # Autre famille de police
-      fonts:
-        - asset: assets/fonts/BebasNeue-Bold.ttf
+          weight: 600
+        - asset: assets/fonts/Raleway-Bold.ttf
+          weight: 700
 
-  # To add assets to your application, add an assets section, like this:
+    - family: BebasNeue
+      fonts:
+        - asset: assets/fonts/BebasNeue-Regular.ttf
+          weight: 500
+        - asset: assets/fonts/BebasNeue-Bold.ttf
+          weight: 700
+
   assets:
     - assets/images/
     - assets/logo-payment/
-    # - images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+# Ancien avec souci
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+# name: kunft
+# description: "A new Flutter project."
+# # The following line prevents the package from being accidentally published to
+# # pub.dev using `flutter pub publish`. This is preferred for private packages.
+# publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
+# # The following defines the version and build number for your application.
+# # A version number is three numbers separated by dots, like 1.2.43
+# # followed by an optional build number separated by a +.
+# # Both the version and the builder number may be overridden in flutter
+# # build by specifying --build-name and --build-number, respectively.
+# # In Android, build-name is used as versionName while build-number used as versionCode.
+# # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
+# # In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
+# # Read more about iOS versioning at
+# # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# # In Windows, build-name is used as the major, minor, and patch parts
+# # of the product and file versions while build-number is used as the build suffix.
+# version: 1.0.0+1
+
+# environment:
+#   sdk: 3.7.2
+
+# # Dependencies specify other packages that your package needs in order to work.
+# # To automatically upgrade your package dependencies to the latest versions
+# # consider running `flutter pub upgrade --major-versions`. Alternatively,
+# # dependencies can be manually updated by changing the version numbers below to
+# # the latest version available on pub.dev. To see which dependencies have newer
+# # versions available, run `flutter pub outdated`.
+# dependencies:
+#   flutter:
+#     sdk: flutter
+
+#   # The following adds the Cupertino Icons font to your application.
+#   # Use with the CupertinoIcons class for iOS style icons.
+ 
+#   carousel_slider: ^5.0.0
+#   carousel_slider_plus: ^7.1.0
+#   card_swiper: ^3.0.1
+#   animated_switcher_plus: ^1.1.1
+#   http: ^1.4.0
+#   dio: ^5.8.0+1
+#   http_parser: ^4.1.2
+#   image_picker: ^1.1.2
+#   shared_preferences: ^2.5.3
+#   css_colors: ^1.1.7
+#   # firebase_core: ^4.0.0
+#   # firebase_auth: ^6.0.1
+#   # google_sign_in: ^7.1.1
+#   # sign_in_with_apple: ^7.0.1
+#   # firebase_app_installations: ^0.4.0
+#   intl: ^0.20.2
+#   # cloud_firestore: ^6.0.0
+#   calendar_date_picker2: ^2.0.1
+#   mobile_scanner: ^7.0.1
+#   qr_code_scanner_plus: ^2.0.10+1
+#   qr: ^3.0.2
+#   lucide_icons: ^0.257.0
+#   animated_notch_bottom_bar: ^1.0.3
+#   salomon_bottom_bar: ^3.3.2
+#   provider: ^6.1.5
+#   animations: ^2.0.11
+#   flutter_date_pickers: ^0.4.3
+#   qr_flutter: ^4.1.0
+#   photo_view_v3: ^0.14.0
+#   google_maps_flutter: ^2.12.3
+#   flutter_map: ^8.2.1
+#   latlong2: ^0.9.1
+#   intl_phone_number_input: ^0.7.4
+ 
+
+#   dependencies:
+
+# dev_dependencies:
+#   flutter_test:
+#     sdk: flutter 
+
+#   # The "flutter_lints" package below contains a set of recommended lints to
+#   # encourage good coding practices. The lint set provided by the package is
+#   # activated in the `analysis_options.yaml` file located at the root of your
+#   # package. See that file for information about deactivating specific lint
+#   # rules and activating additional ones.
+#   flutter_lints: ^5.0.0
+
+# # For information on the generic Dart part of this file, see the
+# # following page: https://dart.dev/tools/pub/pubspec
+
+# # The following section is specific to Flutter packages.
+# flutter:
+
+#   # The following line ensures that the Material Icons font is
+#   # included with your application, so that you can use the icons in
+#   # the material Icons class.
+#   uses-material-design: true
+
+#   fonts:
+#     - family: Barlow # Nom de la famille de police
+#       fonts:
+#         - asset: assets/fonts/Raleway-Bold.ttf # Chemin vers le fichier
+#         - asset: assets/fonts/Raleway-Regular.ttf
+#           weight: 500 # Poids pour le gras
+#         - asset: assets/fonts/Raleway-SemiBold.ttf
+#           weight: 600 # Poids pour le semi-gras
+#     - family: BebasNeue # Autre famille de police
+#       fonts:
+#         - asset: assets/fonts/BebasNeue-Bold.ttf
+#         - asset: assets/fonts/BebasNeue-Regular.ttf
+#           weight: 500 # Poids pour le gras mince
+
+
+#   # To add assets to your application, add an assets section, like this:
+#   assets:
+#     - assets/images/
+#     - assets/logo-payment/
+#     # - images/
+
+#   # An image asset can refer to one or more resolution-specific "variants", see
+#   # https://flutter.dev/to/resolution-aware-images
+
+#   # For details regarding adding assets from package dependencies, see
+#   # https://flutter.dev/to/asset-from-package
+
+#   # To add custom fonts to your application, add a fonts section here,
+#   # in this "flutter" section. Each entry in this list should have a
+#   # "family" key with the font family name, and a "fonts" key with a
+#   # list giving the asset and other descriptors for the font. For
+#   # example:
+#   # fonts:
+#   #   - family: Schyler
+#   #     fonts:
+#   #       - asset: fonts/Schyler-Regular.ttf
+#   #       - asset: fonts/Schyler-Italic.ttf
+#   #         style: italic
+#   #   - family: Trajan Pro
+#   #     fonts:
+#   #       - asset: fonts/TrajanPro.ttf
+#   #       - asset: fonts/TrajanPro_Bold.ttf
+#   #         weight: 700
+#   #
+#   # For details regarding fonts from package dependencies,
+#   # see https://flutter.dev/to/font-from-package
